# csearch

./: .codex-csearch-nlp-resume-job.yaml  .dockerignore  .env.prod.example  .gitignore  .gitmodules  AGENTS 2.md  AGENTS.md  ARCHITECTURE.md  ARGO-PLAN.md  ARGO.md  DEPLOY 2.md  DEPLOY.md  DEV_SETUP.md  LICENSE.txt  NLP.md  README.md  REDIS-PLAN.md  REDIS.md  TODO.md  WIP.md  deploy.sh  docker-compose.yml  package-lock.json
.claude/: launch.json
archiver/: Dockerfile  entrypoint.sh
backend/api_fastapi/: README.md  pyproject.toml
backend/api_fastapi/src/csearch_api/: db.py  main.py  queries.py  settings.py
backend/api_fastapi/src/csearch_api/routes/: __init__.py  bills.py  root.py  semantic.py
docs/: caching.md  deployment.md  engineering-guide 2.md  engineering-guide.md
frontend/: .dockerignore  Dockerfile.deploy  Dockerfile.nginx  README.md  app.vue  bun.lockb  deploy-container.sh  deploy.sh  docker-entrypoint.sh  nginx.conf  nuxt.config.ts  package-lock.json  package.json
k8s/: archiver-deployment.yaml  csearch-archive-pv.yaml  csearch-deployment.yaml  registry-pull-secret.yaml
research/: IDEAS.md  NLP-CONCERNS.md  POSTGRES.md
scraper/: Dockerfile  go.mod  go.sum  goscraper  scraper.go
seed/: .env  Dockerfile  go.mod  go.sum  schema.sql  scraper.go
sqlc/: go.sum  query.sql  schema.sql  scraper.go  sqlc.yaml
src/: .env  Dockerfile  go.mod  go.sum  query.sql  schema.sql  scraper.go  votescraper.go
updater/: .env  Dockerfile  bills.go  data.json  docker-compose.yml  docker-entrypoint.sh  explore.sql  fdsys_billstatus.xml  hashes.go  main.go  (+6 more)
(+112222 files in other folders)
